added toggle to shadows and reflections

--- a/threejs/index.html
+++ b/threejs/index.html
@@ -53,13 +53,12 @@
 		</div>
 		<div class="info2">
 			<div id="fog">TestText</div>
-			<div id="orbitcam">TestText</div>
-			<div id="thirdpersoncam">TestText</div>
-			<div id="topdowncam">TestText</div>
-			<div id="ortocam">TestText</div>
+			<div id="camera">TestText</div>
 			<div id="lamps">TestText</div>
 			<div id="colliders">TestText</div>
 			<div id="lensflare">TestText</div>
+			<div id="shadow">TestText</div>
+			<div id="reflection">TestText</div>
 		</div>
 	</body>
 </html>
