--- a/threejs/index.html
+++ b/threejs/index.html
@@ -59,6 +59,7 @@
 			<div id="lensflare">TestText</div>
 			<div id="shadow">TestText</div>
 			<div id="reflection">TestText</div>
+			<div id="selfplay">TestText</div>
 		</div>
 	</body>
 </html>
